--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
-
-* {
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+CU:wght@100..400&display=swap');
+*{
     box-sizing: border-box;
     margin: 0%;
     padding: 0%;
@@ -8,23 +7,20 @@
     color: #fff;
     text-transform: capitalize;
 }
-
-body {
-    background: #200401;
+body{
+    background-color: #1A1110;
     font-family: "Lato", sans-serif;
 }
-
-header {
+header{
     position: relative;
     padding: 2em 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6)), url(./image/bg_image.jpg);
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url(./image/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 100vh;
 }
-
-.logo {
+.logo{
     font-size: 2em;
     font-weight: 600;
     flex: 1;
@@ -32,17 +28,16 @@ header {
     display: flex;
     align-items: center;
 }
-
-.logo img {
+.logo img{
     width: 70px;
     margin-right: 1%;
 }
-
-.navbar {
+.navbar{
     width: 100%;
     padding: 2rem 3rem;
     margin: auto;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     z-index: 1;
     top: 0;
@@ -52,33 +47,28 @@ header {
     background-color: #000;
     box-shadow: rgba(0,0,0,0.35) 0 5px 15px;
 }
-
-.nav_items {
+.nav_items{
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex: 1;
 }
-
-.item {
+.item{
     display: flex;
     justify-content: center;
 }
-
-.nav_items li {
+.nav_items li{
     list-style: none;
     padding: 1em;
 }
-
-.nav_item li a {
+.nav_items li a{
     text-decoration: none;
     transition: 0.3s;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
 }
-
-.nav_items li::before {
+.nav_items li::before{
     content: '';
     width: 0;
     height: 2px;
@@ -87,16 +77,10 @@ header {
     margin: auto;
     transition: 0.5s;
 }
-
-.nav_items li:hover::before {
+.nav_items li:hover::before{
     width: 100%;
 }
-
-.nav-link {
-    text-decoration: none;
-}
-
-.btn {
+.btn{
     padding: 9px 15px;
     font-size: 18px;
     letter-spacing: 2px;
@@ -105,67 +89,49 @@ header {
     border: 2px solid orangered;
     transition: all 0.5s ease-out;
 }
-
-.nav_manu {
+.nav_menu{
     display: none;
 }
-
-.main {
+.main{
     width: 80%;
     left: 50%;
     top: 55%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
     position: absolute;
     color: #fff;
 }
-
-.heading_1 {
+.heading_1{
     font-size: 2.3em;
 }
-
-.heading {
+.heading{
     font-size: 3.5em;
     padding: 1.5% 0;
     font-family: "Playwrite CU", cursive;
 }
-
-.main_btn {
+.main_btn{
     display: flex;
 }
-
-.btn1:hover {
+.btn1:hover{
     background-color: transparent;
 }
-
-.btn2 {
+.btn2{
     background-color: transparent;
     margin-left: 1%;
     align-items: center;
     display: flex;
 }
-
-.btn2 {
-    background-color: transparent;
-    margin-left: 1%;
-    align-items: center;
-    display: flex;
-}
-
-.btn2 i {
+.btn2 i{
     font-size: 2em;
     margin-right: 6px;
     color: orangered;
 }
-
-.btn2:hover {
+.btn2:hover{
     background-color: orangered;
 }
-
-.btn2:hover i {
+.btn2:hover i{
     color: #fff;
 }
-
-/* --------service----- */
+/* __________services */
 .sec{
     padding: 8% 0 3% 0;
     width: 85%;
@@ -181,15 +147,15 @@ header {
     font-family: 'lato', sans-serif;
 }
 .head .heading_1{
-    font-family: 'playwrite cu', cursive;
+    font-family: 'playwrite CU', cursive;
     color: aliceblue;
     font-size: 1.4em;
 }
 .boxes{
-    margin: 4em;
+    margin-top: 4rem;
     display: grid;
+    gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2em;
 }
 .box{
     text-align: center;
@@ -216,4 +182,227 @@ header {
     border: 2px solid #fff;
     cursor: pointer;
     border-radius: 10px;
+}
+/* __________about */
+.about_heading{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0 6em;
+    align-items: center;
+}
+.about .heading_1,
+.about .heading{
+    grid-column: 1;
+}
+.about .para{
+    grid-column: 2;
+    text-align: right;
+    color: #777;
+}
+.about_box{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2em;
+    margin-top: 5%;
+}
+.para1{
+    color: #888;
+    padding-bottom: 5%;
+}
+.box1{
+    background-color: #ffeedc;
+    box-shadow: rgba(0,0,0,2.24) 0 3px 8px;
+    border: 5px solid chocolate;
+}
+.box1 img{
+    width: 100%;
+}
+.box1_text{
+    padding: 4%;
+}
+.box1_text button:hover{
+    color: #000;
+}
+/* _______contact */
+.contact{
+    margin-top: 6%;
+    width: 100%;
+    background-color: #312c2a;
+}
+.contact_box{
+    display: grid;
+    width: 85%;
+    margin: auto;
+    align-items: center;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+}
+.left_box .heading_1{
+    color: orangered;
+}
+.right_box{
+    text-align: right;
+}
+.right_box img{
+    width: 100%;
+}
+/* __________footer */
+.footer_container{
+    display: grid;
+    gap: 4rem 2rem;
+    grid-template-columns: repeat(4, 1fr);
+}
+.footer_logo img{
+    max-width: 40px;
+}
+.footer_logo span{
+    display: flex;
+    font-size: 1.8rem;
+    font-weight: 800;
+}
+.footer_col .footer_text{
+    max-width: 350px;
+    color: #999;
+    margin: 2rem 0;
+}
+.footer_socials{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    list-style: none;
+}
+.footer_socials a{
+    font-size: 1.8rem;
+    text-decoration: none;
+    padding: 3%;
+}
+.footer_socials a:hover{
+    background-color: orangered;
+}
+.footer_col h4{
+    margin-bottom: 2rem;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.footer_links{
+    display: grid;
+    gap: 1rem;
+    list-style: none;
+}
+.footer_links a{
+    text-decoration: none;
+    color: #999;
+}
+.footer_links a:hover{
+    color: orangered;
+}
+.footer_bar{
+    padding: 1rem;
+    font-size: 1rem;
+    text-align: center;
+}
+/* __________Scroll-up */
+.top{
+    background-color: orangered;
+    font-size: 40px;
+    padding: 0.5rem;
+    position: fixed;
+    border-radius: 10%;
+    right: 5%;
+    cursor: pointer;
+    bottom: -50%;
+}
+.top:hover{
+    transform: translateY(-.6rem);
+}
+.top.show{
+    bottom: 8%;
+}
+
+@media only screen and (max-width:1050px){
+    .about_heading{
+        gap: 0 2em;
+    }
+    .about_box,.boxes{
+        gap: 1em;
+    }
+    .box1_text .btn{
+        padding: 9px;
+        font-size: 15px;
+    }
+    .left_box .heading{
+        font-size: 2.5em;
+    }
+}
+@media only screen and (max-width:850px){
+.nav_items{
+    position: absolute;
+    top: -1%;
+    left: 0;
+    width: 100%;
+    padding: 5em 0em 2em 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    gap: 0.9rem;
+    background-color: #000;
+    transition: 0.5s;
+    z-index: -1;
+    transform: translateY(-100%);
+}
+.nav_items.open{
+    transform: translateY(0);
+}
+.item{
+    flex-direction: column;
+}
+.nav_menu{
+    display: block;
+    font-size: 2em;
+}
+.boxes,.about_box{
+    grid-template-columns: repeat(2,1fr);
+}
+.contact_box{
+    grid-template-columns: 1fr;
+}
+.footer_container{
+    grid-template-columns: repeat(3,1fr);
+}
+}
+@media only screen and (max-width:660px){
+.about_heading{
+    grid-template-columns: 1fr;
+}
+.about .para{
+    grid-column: 1;
+}
+.boxes,.about_box{
+    grid-template-columns: repeat(1,1fr);
+}
+.footer_container{
+    grid-template-columns: repeat(2,1fr);
+}
+.navbar {
+    padding: 2rem 2rem;
+}
+.heading {
+    font-size: 3em;
+}
+.heading_1 {
+    font-size: 2em;
+}
+}
+@media only screen and (max-width:480px){
+    .footer_container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .btn {
+        padding: 9px;
+        font-size: 15px;
+    }
+    .main {
+        width: 90%;
+    }
 }
